# task-tracker

./: CMakeLists.txt
src/businesslogic/: CMakeLists.txt  actionCode.h  employee.cpp  employee.h  employeeInfo.h  task.cpp  task.h  taskInfo.h
src/client/: CMakeLists.txt  client.cpp  client.h  client.ui  connectiontoserver.cpp  connectiontoserver.h  createnewtaskdialog.cpp  createnewtaskdialog.h  createnewtaskdialog.ui  employeedialog.ui  employeedialogwithonetask.cpp  employeedialogwithonetask.h  iconnectiontoserver.h  iemployeedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  socketconnection.cpp  socketconnection.h
src/server/: CMakeLists.txt  consolelogger.cpp  consolelogger.h  logger.h  main.cpp  server.cpp  server.h
